tests/models/f64/fail/lt.rs
use dade::model;
#[model]
struct TestModel {
    #[field(lt = 2)]
    value: f64,
}
fn main() {}
